# ScoreManage

./: CMakeLists.txt  Menu.cpp  Menu.h  ScoreManager.cpp  ScoreManager.h  Student.cpp  Student.h  main.cpp
